# getit

./: CMakeLists.txt  README.md
cmake/: precheck.cmake  setting.cmake
include/modules/programs/: programs_i.h
include/utility/: pathhandler.h  spellhelper.h
modules/: CMakeLists.txt
modules/programs/: CMakeLists.txt  abstractprogramsource.cpp  abstractprogramsource.h  alluserstartmenuprogramsource.cpp  alluserstartmenuprogramsource.h  currentuserstartmenuprogramsource.cpp  currentuserstartmenuprogramsource.h  desktopprogramsource.cpp  desktopprogramsource.h  filesystemprogramsource.cpp  filesystemprogramsource.h  programsfinder.cpp  programsfinder.h  stdafx.h
shell/main/: CMakeLists.txt  main.cpp
